--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,8 @@
                 <div class="col-5 offset-1 well text-center">
                     <div class="card p-2 mt-3" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title">How it works ?</h5>
-                            <p class="card-text text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Ad
-                                amet animi architecto deserunt distinctio inventore.</p>
+                            <h5 class="card-title">Facechanger</h5>
+                            <p class="card-text text-left">If you are searching for a great time killer and funny photo app, this one is for you.</p>
                             <a href="#" class="card-link">Contact</a>
                             <a href="#" class="card-link">Github</a>
                         </div>
